# api-boilerplate

./: .flake8  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  start_app.sh  tox.ini
api/: endpoints.py  main.py  schemas.py
src/: __init__.py
tests/: conftest.py
tests/api/: test_root.py
