[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Dean Kayton"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
pydantic = "^1.8.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
requests = "^2.27.1"
pytest-cov = "^3.0.0"
# with poetry 1.2, investigate this package instead - https://pypi.org/project/poetry-types/
types-orjson = "^3.6.2"
types-requests = "^2.27.7"
types-setuptools = "^57.4.7"
types-toml = "^0.10.3"
types-ujson = "^4.2.1"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
follow_imports_for_stubs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
warn_unreachable = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
